  * Make the upstream branch authoritative for file ids when importing a
    tarball, stopping errors when files are renamed. LP: #588060

  [ James Westby ]
  * Add a --package-merge option to builddeb to build with the -v and -sa
    appropriate when doing a merge from Debian or similar. LP: #576027
  * Fixed a logic error that stops -r working in merge-upstream. LP: #594575

 -- James Westby <james.westby@ubuntu.com>  Thu, 06 May 2010 15:22:40 +0100

bzr-builddeb (2.4.2) UNRELEASED; urgency=low

  [ Jelmer Vernooij ]
  * Avoid AttributeError in the python-apt complatibility code.

  [ James Westby ]
  * Add 'maverick' as an Ubuntu release.

 -- James Westby <james.westby@ubuntu.com>  Tue, 13 Apr 2010 10:27:00 +0100

bzr-builddeb (2.4.1) unstable; urgency=low

  [ Colin Watson ]
  * Consider a .dsc without a Format: to be Format: 1.0.

  [ Jelmer Vernooij ]
  * Fix use of getattr to have 3 arguments to avoid exception. (LP: #572093)

  [ James Westby ]
  * Fix for Launchpad's multi-version support.

 -- James Westby <james.westby@ubuntu.com>  Thu, 18 Mar 2010 14:19:53 -0400

bzr-builddeb (2.4) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Switch section to vcs.
  * Allow the directory service to work with older version of python-apt.
  * Fix compatibility with versions of bzr that don't have
  bzrlib.utils.configobj. (Closes: #572093)

  [ James Westby ]
  * Correct typo that causes packages with .orig.tar.bz2 to fail to build.
  * Also merge tags in merge-package.
  * Adapt to the python-apt 0.8 API. Thanks to Julian Andres Klode.
    (Closes: #572093)
  * Fix merge-upstream with just a branch. (LP: #528273)

  [ John Arbash Meinel ]
  * Improve the changelog merge hook to be smarter when both sides change.

  [ Steve Langasek ]
  * Make merge-upstream --v3 unpack .tar.bz2 with the correct arguments.
    (LP: #529900)

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 13 Feb 2010 01:16:00 +0100

bzr-builddeb (2.3) experimental; urgency=low

  [ James Westby ]