@@ -27,7 +27,11 @@ bzr-builddeb (2.5) UNRELEASED; urgency=low
     appropriate when doing a merge from Debian or similar. LP: #576027
   * Fixed a logic error that stops -r working in merge-upstream. LP: #594575
 
- -- James Westby <james.westby@ubuntu.com>  Thu, 06 May 2010 15:22:40 +0100
+  [ Jelmer Vernooij ]
+  * Determine Bazaar home directory using bzrlib to prevent test
+    isolation issues. Closes: #614125
+
+ -- Jelmer Vernooij <jelmer@debian.org>  Wed, 11 Aug 2010 17:52:23 +0200
 
 bzr-builddeb (2.4.2) UNRELEASED; urgency=low
 
